2012-05-24  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (__cygwin_lock_lock): Replace null thread check with test
	for cygwin_finished_initializing to handle process startup.
	(__cygwin_lock_trylock): Ditto.
	(__cygwin_lock_unlock): Ditto.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (__cygwin_lock_lock): Take null thread at process startup
	into account.
	(__cygwin_lock_trylock): Ditto.
	(__cygwin_lock_unlock): Ditto.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::cancel): Re-allow asynchronous cancellation from
	Cygwin code since it looks like the problem is Windows only.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc: Add a temporary workaround to help Cygwin along while
	newlib doesn't install cleanup handlers.  Explain the problem.
	(class __cygwin_lock_handler): New class.
	(__cygwin_lock_cleanup): New function.
	(__cygwin_lock_lock): Push __cygwin_lock_cleanup thread cleanup
	handler.
	(__cygwin_lock_trylock): Ditto.
	(__cygwin_lock_unlock): Pop thread cleanup handler.
	(pthread::pop_cleanup_handler): Temporarily allow cleanup function to
	destroy cleanup handler so we can pop in another function than we
	pushed in.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::cancel): Only allow asynchronous cancellation
	if the thread is not executing Cygwin or Windows code.  Explain why.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::precreate): Make sure mutex is recursive.
	Explain why.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::pop_cleanup_handler): Move setting the cancelstate
	to PTHREAD_CANCEL_DISABLE from here...
	(pthread::pop_all_cleanup_handlers): ...to here, otherwise any explicit
	call to pthread_cleanup_pop disables cancellation for this thread.

2012-05-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (refcnt): Add i interlocked.  Explain why.